--- a/package.json
+++ b/package.json
@@ -2,14 +2,25 @@
   "name": "casinogame",
   "version": "0.1.0",
   "private": true,
+  "stringify": {
+    "appliesTo": {
+      "includeExtensions": [
+        ".html"
+      ]
+    },
+    "minify": true
+  },
   "dependencies": {
     "react": "^16.5.1",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.1",
+    "react-html-parser": "^2.0.2",
+    "react-iframe": "^1.3.0",
     "react-modal": "^3.5.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "stringify": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
