--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
-    "stringify": "^5.2.0"
+    "stringify": "^5.2.0",
+    "merge": ">=1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
